Fix footer issue with extra white space for big screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,7 @@ iframe{
   }
 }
 
+
 /*For larger to medium screens size from 1200px wide and down (checked reducing the screen with the developer tools), for hero image and about us*/
 @media screen and (max-width: 1200px) {
     #about-us{
@@ -237,14 +238,15 @@ iframe{
 }
 
 #page-container {
-min-height: 100vh;
+min-height: 95vh;
 position: relative;
 }
 
 #content-wrap {
-    padding-bottom: 10.5rem;    /* Footer height */
-    position: relative;
-     /*height: 1800px;*/
+    padding-bottom: 10.5rem;    /* kept Footer height */
+
+   /* min-height: 100vh;*/
+
   }
 
 footer {
@@ -252,7 +254,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 10.5rem;            /* Footer height */
+             /*Deleted Footer height */
     position: absolute;
       /*position: fixed;*/
     }
